--- a/intro_timeseries_forecasting.ipynb
+++ b/intro_timeseries_forecasting.ipynb
@@ -1972,14 +1972,14 @@
    ],
    "source": [
     "# Treino\n",
-    "train_feat['sin_week'] = np.sin(2 * np.pi * train_feat.index.isocalendar().week / 12)\n",
-    "train_feat['cos_week'] = np.cos(2 * np.pi * train_feat.index.isocalendar().week / 12)\n",
+    "train_feat['sin_week'] = np.sin(2 * np.pi * train_feat.index.isocalendar().week / 52)\n",
+    "train_feat['cos_week'] = np.cos(2 * np.pi * train_feat.index.isocalendar().week / 52)\n",
     "train_feat['sin_month'] = np.sin(2 * np.pi * train_feat.index.month / 12)\n",
     "train_feat['cos_month'] = np.cos(2 * np.pi * train_feat.index.month / 12)\n",
     "\n",
     "# Teste\n",
-    "test_feat['sin_week'] = np.sin(2 * np.pi * test_feat.index.isocalendar().week / 12)\n",
-    "test_feat['cos_week'] = np.cos(2 * np.pi * test_feat.index.isocalendar().week / 12)\n",
+    "test_feat['sin_week'] = np.sin(2 * np.pi * test_feat.index.isocalendar().week / 52)\n",
+    "test_feat['cos_week'] = np.cos(2 * np.pi * test_feat.index.isocalendar().week / 52)\n",
     "test_feat['sin_month'] = np.sin(2 * np.pi * test_feat.index.month / 12)\n",
     "test_feat['cos_month'] = np.cos(2 * np.pi * test_feat.index.month / 12)\n",
     "\n",
@@ -1998,6 +1998,15 @@
    "metadata": {},
    "source": [
     "### LightGBM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para entender um pouco mais sobre a LightGBM, acesse [este link](https://lightgbm.readthedocs.io/en/stable/Features.html)\n",
+    "\n",
+    "Para saber um pouco mais sobre a LightGBMRegressor, na API Python, [veja aqui](https://lightgbm.readthedocs.io/en/stable/pythonapi/lightgbm.LGBMRegressor.html#lightgbm.LGBMRegressor) "
    ]
   },
   {
@@ -2279,6 +2288,15 @@
    "metadata": {},
    "source": [
     "#### XGBoost"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para entender como o XGBoost funciona, veja [a documentação](https://xgboost.readthedocs.io/en/stable/tutorials/model.html)\n",
+    "\n",
+    "Para aprofundar nos parâmetros e métodos do XGBoost na API do Scikit-learn, [veja aqui](https://xgboost.readthedocs.io/en/stable/python/python_api.html#xgboost.XGBRegressor)"
    ]
   },
   {
@@ -2740,6 +2758,13 @@
    "outputs": [],
    "source": [
     "# seu codigo aqui"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ótimo! Agora treine um pouco mais, varie os valores dos parâmetros, ajuste outros parâmetros e crie novas *features*. Se desejar, teste outros modelos além da LightGBM e do XGBoost. Depois, avalie como os modelos se comportaram."
    ]
   }
  ],
